<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textTitle">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/textTitle">

       <include
           android:id="@+id/include2"
           layout="@layout/toolbar"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <TextView
           android:id="@+id/textView"
           style="@style/Textview.Poppins16dpTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="24dp"
           android:text="@string/full_name"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/include2" />

       <EditText
           android:id="@+id/etName"
           style="@style/Textview.editText"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:background="@drawable/shape_edit_text"
           android:ems="10"
           android:hint="@string/full_name"
           android:inputType="textPersonName"
           android:padding="16dp"
           android:textColorHint="@color/hint"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="@+id/textView"
           app:layout_constraintTop_toBottomOf="@+id/textView" />

       <TextView
           android:id="@+id/textView4"
           style="@style/Textview.Poppins16dpTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:text="@string/email"
           app:layout_constraintStart_toStartOf="@+id/textView"
           app:layout_constraintTop_toBottomOf="@+id/etName" />

       <EditText
           android:id="@+id/etEmail"
           style="@style/Textview.editText"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:background="@drawable/shape_edit_text"
           android:ems="10"
           android:hint="@string/email"
           android:inputType="textPersonName"
           android:padding="16dp"
           android:textColorHint="@color/hint"
           app:layout_constraintEnd_toEndOf="@+id/etName"
           app:layout_constraintStart_toStartOf="@+id/textView4"
           app:layout_constraintTop_toBottomOf="@+id/textView4" />

       <TextView
           android:id="@+id/textView5"
           style="@style/Textview.Poppins16dpTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:text="@string/password"
           app:layout_constraintStart_toStartOf="@+id/etEmail"
           app:layout_constraintTop_toBottomOf="@+id/etEmail" />

       <EditText
           android:id="@+id/etPassword"
           style="@style/Textview.editText"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:background="@drawable/shape_edit_text"
           android:ems="10"
           android:hint="@string/password"
           android:inputType="textPassword"
           android:padding="16dp"
           android:textColorHint="@color/hint"
           app:layout_constraintEnd_toEndOf="@+id/etEmail"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="@+id/textView5"
           app:layout_constraintTop_toBottomOf="@+id/textView5" />

       <TextView
           android:id="@+id/textView6"
           style="@style/Textview.Poppins16dpTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:text="@string/address"
           app:layout_constraintStart_toStartOf="@+id/etPassword"
           app:layout_constraintTop_toBottomOf="@+id/etPassword" />

       <EditText
           android:id="@+id/etAddress"
           style="@style/Textview.editText"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:background="@drawable/shape_edit_text"
           android:ems="10"
           android:hint="Address"
           android:inputType="textPersonName"
           android:padding="16dp"
           android:textColorHint="@color/hint"
           app:layout_constraintEnd_toEndOf="@+id/etPassword"
           app:layout_constraintStart_toStartOf="@+id/textView6"
           app:layout_constraintTop_toBottomOf="@+id/textView6" />

       <TextView
           android:id="@+id/textView7"
           style="@style/Textview.Poppins16dpTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:text="@string/no_phone"
           app:layout_constraintStart_toStartOf="@+id/etAddress"
           app:layout_constraintTop_toBottomOf="@+id/etAddress" />

       <EditText
           android:id="@+id/etPhone"
           style="@style/Textview.editText"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:background="@drawable/shape_edit_text"
           android:ems="10"
           android:hint="Phone number"
           android:inputType="phone"
           android:padding="16dp"
           android:textColorHint="@color/hint"
           app:layout_constraintEnd_toEndOf="@+id/etAddress"
           app:layout_constraintStart_toStartOf="@+id/textView7"
           app:layout_constraintTop_toBottomOf="@+id/textView7" />

       <TextView
           android:id="@+id/textView8"
           style="@style/Textview.Poppins16dpTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:text="@string/city"
           app:layout_constraintStart_toStartOf="@+id/etPhone"
           app:layout_constraintTop_toBottomOf="@+id/etPhone" />

       <EditText
           android:id="@+id/etCity"
           style="@style/Textview.editText"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:background="@drawable/shape_edit_text"
           android:ems="10"
           android:inputType="textPersonName"
           android:padding="16dp"
           android:hint="City"
           android:textColorHint="@color/hint"
           app:layout_constraintEnd_toEndOf="@+id/etPhone"
           app:layout_constraintStart_toStartOf="@+id/textView8"
           app:layout_constraintTop_toBottomOf="@+id/textView8" />

       <Button
           android:id="@+id/btnRegister"
           style="@style/Button.Primary"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="32dp"
           android:layout_marginTop="32dp"
           android:layout_marginEnd="32dp"
           android:layout_marginBottom="24dp"
           android:text="Register"
           android:textAllCaps="false"
           android:textColor="@color/white"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="@+id/etCity"
           app:layout_constraintStart_toStartOf="@+id/etCity"
           app:layout_constraintTop_toBottomOf="@+id/etCity" />



   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>